<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.example.david.sorttextureapp.IntroActivity"
    android:weightSum="1">

    <!--<TextView-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:textAppearance="?android:attr/textAppearanceLarge"-->
        <!--android:text="@string/app_title"-->
        <!--android:id="@+id/textView"-->
        <!--android:textSize="30sp"-->
        <!--android:textIsSelectable="false"-->
        <!--android:layout_gravity="center_horizontal"-->
        <!--android:textStyle="bold" />-->

    <ImageView
        android:layout_width="209dp"
        android:layout_height="261dp"
        android:id="@+id/imageView"
        android:src="@drawable/tpadlogo"
        android:layout_gravity="center_horizontal"
        android:layout_weight="0.15" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/app_description"
        android:id="@+id/textView2" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/app_instruction"
        android:id="@+id/textView3" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start_button"
        android:id="@+id/button"
        android:onClick="StartTask"
        android:layout_gravity="center_horizontal" />

</LinearLayout>
